redis/templates/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: redis
spec:
  selector:
    app: redis-cluster
  ports:
    - name: client
      protocol: TCP
      port: 6379
      targetPort: 6379
  sessionAffinity: None
  type: ClusterIP # Keep redis unavailable outside the cluster
