redis/templates/redis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-ingress
  namespace: redis
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - redis.echobase.network
      secretName: redis-prod-tls
  rules:
    - host: redis.echobase.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-service
                port:
                  number: 6379
